Last updated on 23/07/2023 (+8utc) by Jirocab/RushieWashie

= Beta 1-5 () =

    + Added more music from the Terra Nil Soundtrack by Meydän
    + Maps added: sanctuary, dorment-cell
    + Units added: aero, striker, venom, phorid, embryo
    + Blocks added: lumaWall, redSandBoulder, avenger, arialConstruct, groundConstruct, analogProcessor, mechanicalSwitch, mechanicalRegistry
    ~ Various balance changes
    ~ Updated and made load disclaimer taggable
    ~ Bug fix: all cores except remnant can be chosen to be launched
    ~ Internal: Deprecated taurus using MendTurret, uses PowerTurret instead
	~ Internal: Turrets moved to NyfalisTurrets.java
    ~ Improve Planet rules, Custom unit ai, Tech tree and Core database
    ~ Sprites Contributed by Remington Thomas: rustyIron
    ~ Given coreRelic, coreShrine, coreTemple a weapon

= Beta 1-4 (e898d42) = https://github.com/JiroCab/Olupis/tree/e898d42d0b490a209939e90e4b9c7ae1a641b884
    ~ !! Rebranded to `Nyfalis`
    ~ Mod browser Visible, w/ in game Wip disclaimer

    + Added toxopid to gradle
    + Gnat got a healing Turret
    + Taurus now works as intended
    + Relic core now uses propeller used of thrusters
    + Failsafe banning of Nyfalis blocks on other planets (Toggleable)
    + Sprites Contributed by Ethanol10: wire, wireBridge [https://github.com/SuperEthanol10]
    + Sprites Contributed by siede2010: iron-router, iron-junction, rustyDrill, rustyIronConveyor (corners) [https://github.com/siede2010]
    + Internal: Added Wip/Raw files: cinderBloom, infernal-bloom , infernal-megabloom, enchanted_forest_pallet, wire, taurus, gnat (Remington Thomas)
    + Sprites Contributed by Remington Thomas: infernal-bloom, infernal-megabloom, oreCobalt, oreIron, oreQuartz, Taurus [https://github.com/NightmarishWolf]
    + Blocks added: brimstone-slag, lumaGrass, green-shrubs-crooked, yellow-shrubs-crooked, oreQuartz, hive, construct, ironDistributor, broiler, grassyVent, mossyVent, stoneVent, basaltVent, quartzBattery